Fix configuration in order to work cxf with Spring rest correctly.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/topstoriesws
-cxf.path=/
+cxf.path=/services
+cxf.servlet.load-on-startup=-1
 
 nyt.topstories.key=d234578b8718451cac8cdb0c4722ad9d
